Fix dot alignment

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 .fret{
     height: 25px;
     border-right: 4px solid black;
+    padding: 0
 }
 
 .string-hr{
